--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 const pageTitle = "About Me";
 const identity = {
@@ -53,6 +54,8 @@ const textCase = "uppercase"
         <ul>
             {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
+
+        <Footer />
 
 	</body>
 </html>
