--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 const pageTitle = "My Astro Learning Blog";
 ---
@@ -27,6 +28,8 @@ const pageTitle = "My Astro Learning Blog";
                 <a href="/posts/post-3">Post 3</a>
             </li>
         </ul>
+
+        <Footer />
 
 	</body>
 </html>
