--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -56,6 +56,8 @@ const textCase = "uppercase"
         </ul>
 
         <Footer />
-
+        <script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
