--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
 const pageTitle = "About Me";
+const finished = true;
 const identity = {
     firstName: "Aidan",
     location: "Richmond, Virginia, USA",
